k8s/overlays/homolog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-ticket-homolog
  labels:
    name: ms-ticket-homolog
