k8s/overlays/homolog/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ticket
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ms-ticket
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
